[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/AssetsAlternativo/Fonts/ChiKareGo2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MainMenuAnimatedText.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/BGM/Sanctuary Guardian (What Meme)   Earthbound Musi.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=2]
size = 70
outline_color = Color( 0.333333, 0.333333, 0.333333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=3]
size = 112
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 119
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -444, 0 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.0493164, 0.0625, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = -303.0
margin_right = 306.0
margin_bottom = -76.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 249.0
margin_bottom = 73.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
text = "Play"
flat = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 249.0
margin_bottom = 150.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 249.0
margin_bottom = 227.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 7 )
text = "Quit"
flat = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -312.0
margin_top = 56.0
margin_right = 318.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 3 )
text = "Typing Titans"
script = ExtResource( 3 )

[node name="TweenLabel" type="Tween" parent="Label"]

[node name="Label2" type="Label" parent="Label"]
anchor_left = 0.68
anchor_top = 0.413
anchor_right = 0.68
anchor_bottom = 0.413
margin_left = 200.32
margin_top = -41.713
margin_right = 242.32
margin_bottom = 47.287
custom_fonts/font = SubResource( 4 )
text = "|"

[node name="TweenLabel2" type="Tween" parent="Label/Label2"]

[node name="TweenLabel21" type="Tween" parent="Label/Label2"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -18.571
autoplay = true

[connection signal="focus_entered" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionsButton" to="." method="_on_PlayButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
